Http-client-branch: (WebSocket) refactoring for the sake of extra test coverage